# Wallpepora

./: .gitignore  CMakeLists.txt  README.md
includes/cli/: cli.hpp  cli_utils.hpp
includes/cli/commands/: command.hpp  delete_command.hpp  export_command.hpp  fill_command.hpp  generate_command.hpp  load_command.hpp  merge_command.hpp  place_command.hpp  remove_command.hpp  reset_command.hpp  set_command.hpp  show_command.hpp  unmerge_command.hpp
includes/controllers/: grid_controller.hpp  images_controller.hpp  wallpapers_controller.hpp  workspace_controller.hpp
includes/gui/: grid_editor_panel.hpp  grid_painter.hpp  grid_params_panel.hpp  gui_app.hpp  gui_utils.hpp  images_panel.hpp  main_frame.hpp  paint_area.hpp  wallpapers_panel.hpp
includes/model/: images.hpp  tiles.hpp
res/ui/: grid_editor_panel.xrc  grid_params_panel.xrc  images_panel.xrc  main_frame.xrc  wallpapers_panel.xrc
src/: main.cpp
src/cli/: cli.cpp  cli_utils.cpp
src/cli/commands/: delete_command.cpp  export_command.cpp  fill_command.cpp  generate_command.cpp  load_command.cpp  merge_command.cpp  (+6 more)
src/controllers/: grid_controller.cpp  images_controller.cpp  wallpapers_controller.cpp  workspace_controller.cpp
src/gui/: grid_editor_panel.cpp  grid_painter.cpp  grid_params_panel.cpp  gui_app.cpp  gui_utils.cpp  images_panel.cpp  main_frame.cpp  paint_area.cpp  wallpapers_panel.cpp
src/model/: images.cpp  tiles.cpp
tests/: fixtures.cpp  fixtures.hpp
tests/controllers/: tests_grid_controller.cpp  tests_images_controller.cpp  tests_images_controllers.cpp
tests/model/: tests_images.cpp
(+2 files in other folders)
